syntax = "proto3";
import "example/example_proto/common/p2p_validate.proto";
package example;

message MyMessage1
{
    optional string content = 1;
}

message MyMessage2
{
    // fix https://github.com/so1n/protobuf_to_pydantic/issues/82
    optional MyMessage1 my_message1 = 1[(p2p_validate.rules).message.required=true];
    // fix https://github.com/so1n/protobuf_to_pydantic/issues/85
    optional MyMessage1 my_message2 = 2;
    MyMessage1 my_message3 = 3[(p2p_validate.rules).message.required=true];
    MyMessage1 my_message4 = 4;
}

message MyMessage3
{
    // p2p: {"required": true}
    optional MyMessage1 my_message1 = 1;
    optional MyMessage1 my_message2 = 2;
    // p2p: {"required": true}
    MyMessage1 my_message3 = 3;
    MyMessage1 my_message4 = 4;
}
